add value plan_task refactord
